# Virtual-Pet-Simulator

./: .gitignore  CMakeLists.txt  README.md  test.c
build_tools/: build.sh  flash.sh
gui/: intro.py
src/: CMakeLists.txt  character_config.c  displaystate.c  drawing.c  inputs.c  inventory.c  itemlist.c  lcd_main.c  menus.c  player_character.c
src/include/: character_config.h  displaystate.h  drawing.h  inputs.h  itemlist.h  menus.h  player_character.h
src/lib/GUI/: ImageData.c  ImageData.h
tests/: test.c
